2011-03-21  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] [Stable] AtkHypertext exposes wrong offsets for links placed inside <span> nodes
        https://bugs.webkit.org/show_bug.cgi?id=56737

        Only consider parent objects not ignoring accessibility.

        * accessibility/gtk/WebKitAccessibleHyperlink.cpp:
        (webkitAccessibleHyperlinkGetStartIndex): Look for the parent
        object not ignoring accessibility for the current hyperlink.
        (webkitAccessibleHyperlinkGetEndIndex): Ditto.
2011-03-21  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] [Stable] AtkHypertext exposes wrong offsets for links placed inside <span> nodes
        https://bugs.webkit.org/show_bug.cgi?id=56737

        * tests/testatk.c:
        (testWebkitAtkHypertextAndHyperlinks): Updated unit test to also
        check offsets for hyperlinks inside <span> nodes.

Canonical link: https://commits.webkit.org/71428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81587 268f45cc-cd09-0410-ab3c-d52691b4dbfc